syntax = "proto3";
package osmosis.farm.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/api/annotations.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/c-osmosis/osmosis/x/farm/types";

service Query {
  rpc PendingRewards(QueryPendingRewardsRequest) returns (QueryPendingRewardsResponse) {
    option (google.api.http).get = "/osmosis/farm/v1beta1/pending-rewards/{farmId}/{address}";
  }
}

message QueryPendingRewardsRequest {
  uint64 farmId = 1 [ (gogoproto.moretags) = "yaml:\"farm_id\"" ];
  string address = 2;
}

message QueryPendingRewardsResponse {
  repeated cosmos.base.v1beta1.DecCoin rewards = 1
    [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins"];
}
